--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="RuleML2TPTP : This project is aimed at implementing an XSLT 2.0 translator to convert Datalog+ Deliberation RuleML 1.01 in XML format to an equivalent representation in a subset of the TPTP (Thousands of Problems for Theorem Provers) format.">
+    <meta name="description" content="RuleML2TPTP : This project is aimed at implementing an XSLT 2.0 translator to convert FOL Deliberation RuleML 1.01 in XML format to an equivalent representation in a subset of the TPTP (Thousands of Problems for Theorem Provers) format.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -16,14 +16,14 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/EdmonL/RuleML2TPTP">View on GitHub</a>
+          <a id="forkme_banner" href="https://github.com/RuleML/RuleML2TPTP">View on GitHub</a>
 
           <h1 id="project_title">RuleML2TPTP</h1>
-          <h2 id="project_tagline">This project is aimed at implementing an XSLT 2.0 translator to convert Datalog+ Deliberation RuleML 1.01 in XML format to an equivalent representation in a subset of the TPTP (Thousands of Problems for Theorem Provers) format.</h2>
+          <h2 id="project_tagline">This project is aimed at implementing an XSLT 2.0 translator to convert FOL Deliberation RuleML 1.01 in XML format to an equivalent representation in a subset of the TPTP (Thousands of Problems for Theorem Provers) format.</h2>
 
             <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/EdmonL/RuleML2TPTP/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/EdmonL/RuleML2TPTP/tarball/master">Download this project as a tar.gz file</a>
+              <a class="zip_download_link" href="https://github.com/RuleML/RuleML2TPTP/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/RuleML/RuleML2TPTP/tarball/master">Download this project as a tar.gz file</a>
             </section>
         </header>
     </div>
@@ -37,46 +37,38 @@
 <p><em>This is an easy-to-use translator utilizing XSLT 2.0 between two rule languages.</em></p>
 
 <h3>
+<a id="notice" class="anchor" href="#notice" aria-hidden="true"><span class="octicon octicon-link"></span></a>Notice</h3>
+
+<p>This project was originally developed on <a href="https://github.com/EdmonL/RuleML2TPTP">EdmonL/RuleML2TPTP</a>, but now the development work has been transferred to this repository. The old repository <a href="https://github.com/EdmonL/RuleML2TPTP">EdmonL/RuleML2TPTP</a> is kept only for reference (like a frozen branch or a tag). The entry page for the old repository is <a href="http://edmonl.github.io/RuleML2TPTP/">here</a>, where the slides and report for the old repository can be obtained.</p>
+
+<h3>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
 <p><a href="http://wiki.ruleml.org">RuleML</a> is a knowledge representation language developed by the non-profit organization RuleML Inc. RuleML is being used for sharing rule bases in XML and publishing them on the Web. It has broad coverage and is defined as an extensible family of sublanguages across various rule logics and platforms. RuleML consists of <a href="http://wiki.ruleml.org/index.php/Specification_of_Deliberation_RuleML">Deliberation RuleML</a> and <a href="http://wiki.ruleml.org/index.php/Specification_of_Reaction_RuleML">Reaction RuleML</a>. </p>
 
-<p>This project is aimed at implementing an <a href="http://www.w3.org/TR/xslt20/">XSLT 2.0</a> translator to convert <a href="http://www.slideshare.net/polibear/datalog-and-its-extensions-for-semantic-web-databases">Datalog+</a> <a href="http://wiki.ruleml.org/index.php/Specification_of_Deliberation_RuleML_1.01">Deliberation RuleML 1.01</a> in XML format to an equivalent representation in a subset of the (FOF) <a href="http://www.cs.miami.edu/%7Etptp/">TPTP</a> language. See <a href="http://deliberation.ruleml.org/1.01/doc/datalogplus_min_normal/">here</a> for the normalized Datalog+ Deliberation RuleML 1.01 schema on which this project is based.</p>
-
-<h3>
-<a id="initiative-report-and-slides" class="anchor" href="#initiative-report-and-slides" aria-hidden="true"><span class="octicon octicon-link"></span></a>Initiative, Report and Slides</h3>
-
-<p>This project was initiated as a <a href="http://www.cs.unb.ca/%7Eboley/cs6795swt/fall2014projects.html">course project</a> (Team 5) in <a href="http://www.cs.unb.ca/%7Eboley/cs6795swt/">Semantic Web Techniques</a> in <a href="http://www.unb.ca">UNB</a>. Thanks to <a href="http://www.cs.unb.ca/%7Eboley/">Prof. Harold Boley</a> and advisor <a href="http://www.alt2is.com/">Dr. Tara Athan</a> for their instruction in semantic web techniques! The project report can be downloaded from <a href="http://edmonl.github.io/RuleML2TPTP/RuleML2TPTP_report.pdf">here</a>. There are also the <a href="http://edmonl.github.io/RuleML2TPTP/presentation/slides_with_sources.zip">slides</a> (two parts, <a href="http://edmonl.github.io/RuleML2TPTP/presentation/RuleML2TPTP_part1_ChangyangLiu.pdf">part 1</a> presented by Changyang Liu, <a href="http://edmonl.github.io/RuleML2TPTP/presentation/RuleML2TPTP_part2_MengLuan.pdf">part 2</a> presented by Meng Luan) and <a href="http://edmonl.github.io/RuleML2TPTP/presentation/ruleml_examples.zip">RuleML examples</a> that were used for a presentation in class.</p>
+<p>This project is aimed at implementing an <a href="http://www.w3.org/TR/xslt20/">XSLT 2.0</a> translator to convert <a href="http://wiki.ruleml.org/index.php/Specification_of_Deliberation_RuleML_1.01">Deliberation RuleML 1.01</a> in XML format to an equivalent representation in a subset of the (FOF) <a href="http://www.cs.miami.edu/%7Etptp/">TPTP</a> language.</p>
 
 <h3>
 <a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting Started</h3>
 
 <ol>
-<li>Download the binary or source code from the <a href="https://github.com/EdmonL/RuleML2TPTP/releases">project releases</a>.</li>
-<li>If the source code is downloaded, use ant to build by "ant jar". See "ant -projecthelp" for other ant targets.</li>
-<li>Translate a RuleML file by calling "java -jar /path/to/ruleml2tptp.jar -s &lt;source RuleML filename&gt; -o &lt;output filename&gt;". See "java -jar /path/to/ruleml2tptp.jar -h" for full usage.</li>
-<li>Java SE 7 or higher is recommended.</li>
-<li>Saxon is used dynamically, so saxon.jar can be removed and the local JAXP implementation will be used instead. Make sure, however, that the local implementation supports XSLT 2.0, or things will go wrong.</li>
-<li>See the <a href="https://github.com/EdmonL/RuleML2TPTP/wiki">project wiki</a> for other documentation.</li>
+<li>This project is built using <a href="http://maven.apache.org/">maven</a>.</li>
+<li>Translate a RuleML file by calling "java -jar /path/to/ruleml2tptp.jar &lt;source&gt; -o &lt;output&gt;". Use option "-h" for a brief usage.</li>
+<li>This project needs JDK 1.7 or higher to compile the Java code.</li>
 </ol>
 
 <h3>
 <a id="ruleml-examples" class="anchor" href="#ruleml-examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>RuleML Examples</h3>
 
-<p>Here are some good RuleML examples from <a href="http://wiki.ruleml.org/index.php/Specification_of_Deliberation_RuleML_1.01#Examples">RuleML wiki</a> or <a href="http://deliberation.ruleml.org/1.01/exa/DatalogPlus/">here</a> to try with this project.</p>
-
-<h3>
-<a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h3>
-
-<p>This project is under <a href="https://github.com/EdmonL/RuleML2TPTP/blob/master/LICENSE">GNU GPL v3.0</a>.</p>
+<p>Here are some good RuleML examples from <a href="http://wiki.ruleml.org/index.php/Specification_of_Deliberation_RuleML_1.01#Examples">RuleML wiki</a> to try with this project.</p>
       </section>
     </div>
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">RuleML2TPTP maintained by <a href="https://github.com/EdmonL">EdmonL</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p class="copyright">RuleML2TPTP maintained by <a href="https://github.com/RuleML">RuleML</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
