--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="RuleML2TPTP : This project is aimed at implementing an XSLT 2.0 translator to convert FOL Deliberation RuleML 1.01 in XML format to an equivalent representation in a subset of the TPTP (Thousands of Problems for Theorem Provers) format.">
+    <meta name="description" content="RuleML2TPTP : This project is aimed at implementing an XSLT 2.0 translator to convert Deliberation RuleML 1.01 in XML format to an equivalent representation in a subset of the TPTP (Thousands of Problems for Theorem Provers) format.">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/RuleML/RuleML2TPTP">View on GitHub</a>
 
           <h1 id="project_title">RuleML2TPTP</h1>
-          <h2 id="project_tagline">This project is aimed at implementing an XSLT 2.0 translator to convert FOL Deliberation RuleML 1.01 in XML format to an equivalent representation in a subset of the TPTP (Thousands of Problems for Theorem Provers) format.</h2>
+          <h2 id="project_tagline">This project is aimed at implementing an XSLT 2.0 translator to convert Deliberation RuleML 1.01 in XML format to an equivalent representation in a subset of the TPTP (Thousands of Problems for Theorem Provers) format.</h2>
 
             <section id="downloads">
               <a class="zip_download_link" href="https://github.com/RuleML/RuleML2TPTP/zipball/master">Download this project as a .zip file</a>
@@ -31,15 +31,12 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <h1>
-<a id="ruleml2tptp" class="anchor" href="#ruleml2tptp" aria-hidden="true"><span class="octicon octicon-link"></span></a>RuleML2TPTP</h1>
-
-<p><em>This is an easy-to-use translator utilizing XSLT 2.0 between two rule languages.</em></p>
+        <p><em>This is an easy-to-use translator utilizing XSLT 2.0 between two rule languages.</em></p>
 
 <h3>
 <a id="notice" class="anchor" href="#notice" aria-hidden="true"><span class="octicon octicon-link"></span></a>Notice</h3>
 
-<p>This project was originally developed on <a href="https://github.com/EdmonL/RuleML2TPTP">EdmonL/RuleML2TPTP</a>, but now the development work has been transferred to this repository. The old repository <a href="https://github.com/EdmonL/RuleML2TPTP">EdmonL/RuleML2TPTP</a> is kept only for reference (like a frozen branch or a tag). The entry page for the old repository is <a href="http://edmonl.github.io/RuleML2TPTP/">here</a>, where the slides and report for the old repository can be obtained.</p>
+<p>This project was originally developed on <a href="https://github.com/EdmonL/RuleML2TPTP">EdmonL/RuleML2TPTP</a>, but now the development work has been transferred to this repository after version 1.02. The old repository <a href="https://github.com/EdmonL/RuleML2TPTP">EdmonL/RuleML2TPTP</a> is kept only for reference (like a frozen branch or a tag). The entry page for the old repository is <a href="http://edmonl.github.io/RuleML2TPTP/">here</a>, where the slides and report for the old repository can be obtained.</p>
 
 <h3>
 <a id="introduction" class="anchor" href="#introduction" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h3>
@@ -48,14 +45,20 @@
 
 <p>This project is aimed at implementing an <a href="http://www.w3.org/TR/xslt20/">XSLT 2.0</a> translator to convert <a href="http://wiki.ruleml.org/index.php/Specification_of_Deliberation_RuleML_1.01">Deliberation RuleML 1.01</a> in XML format to an equivalent representation in a subset of the (FOF) <a href="http://www.cs.miami.edu/%7Etptp/">TPTP</a> language.</p>
 
-<h3>
-<a id="getting-started" class="anchor" href="#getting-started" aria-hidden="true"><span class="octicon octicon-link"></span></a>Getting Started</h3>
+<p>Also see the <a href="https://github.com/RuleML/RuleML2TPTP">readme file</a> for brief usage.</p>
 
-<ol>
-<li>This project is built using <a href="http://maven.apache.org/">maven</a>.</li>
-<li>Translate a RuleML file by calling "java -jar /path/to/ruleml2tptp.jar &lt;source&gt; -o &lt;output&gt;". Use option "-h" for a brief usage.</li>
-<li>This project needs JDK 1.7 or higher to compile the Java code.</li>
-</ol>
+<h3>
+<a id="supported-deliberation-ruleml-layers" class="anchor" href="#supported-deliberation-ruleml-layers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Supported Deliberation RuleML Layers</h3>
+
+<p>Three main expressivity layers of Deliberation RuleML are supported by the following versions:</p>
+
+<ul>
+<li> Layer Datalog+: version 1.0x</li>
+<li> Layer Hornlog+: version 1.1x</li>
+<li> Layer FOL: version 2.0 and higher</li>
+</ul>
+
+<p>The pre-built binaries can be obtained on the <a href="https://github.com/RuleML/RuleML2TPTP/releases">releases page</a>.</p>
 
 <h3>
 <a id="ruleml-examples" class="anchor" href="#ruleml-examples" aria-hidden="true"><span class="octicon octicon-link"></span></a>RuleML Examples</h3>
