Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
 <p>This project is aimed at implementing an <a href="http://www.w3.org/TR/xslt20/">XSLT 2.0</a> translator to convert <a href="http://wiki.ruleml.org/index.php/Specification_of_Deliberation_RuleML_1.01">Deliberation RuleML 1.01</a> in XML format to an equivalent representation in a subset of the (FOF) <a href="http://www.cs.miami.edu/%7Etptp/">TPTP</a> language.</p>
 
-<p>Also see the <a href="https://github.com/RuleML/RuleML2TPTP">readme file</a> for brief usage.</p>
+<p>For an documentation page for the joint endeavors of the RuleML and TPTP communities, see <a href="http://wiki.ruleml.org/index.php/TPTP_RuleML">TPTP RuleML</a> on the RuleML wiki. Also see the <a href="https://github.com/RuleML/RuleML2TPTP">readme file</a> of this project for brief usage.</p>
 
 <h3>
 <a id="supported-deliberation-ruleml-layers" class="anchor" href="#supported-deliberation-ruleml-layers" aria-hidden="true"><span class="octicon octicon-link"></span></a>Supported Deliberation RuleML Layers</h3>
